--- a/trybe-projects/project12-movie-cards-library/package.json
+++ b/trybe-projects/project12-movie-cards-library/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "movie-library-cards",
+  "name": "sd-0x-project-movie-card-library-stateful",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0",
     "acorn": ">=7.1.1",
-    "minimist": ">=1.2.3",
-    "serialize-javascript": ">=3.1.0"
+    "minimist": ">=1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
