--- a/trybe-projects/project12-movie-cards-library/package.json
+++ b/trybe-projects/project12-movie-cards-library/package.json
@@ -10,11 +10,14 @@
     "acorn": ">=7.1.1",
     "minimist": ">=1.2.3"
   },
+  "homepage": "https://renatanovais.github.io/movie-library-stateful/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose=true",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1"
+    "eslint-config-airbnb": "^18.0.1",
+    "gh-pages": "^3.1.0"
   }
 }
